fix spacing

--- a/css/stylehomepage.css
+++ b/css/stylehomepage.css
@@ -315,7 +315,7 @@ hr {
         all: unset;
         display: block;
         align-content: center;
-        padding-top: 0px;
+        padding-top: 30px;
         width: 100%;
     }
     .piccontainerborder,
